--- a/app/components/Header/Nav/index.module.css
+++ b/app/components/Header/Nav/index.module.css
@@ -7,6 +7,7 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 100ms;
   z-index: 999;
+  font-family: var(--font-space_grotesk);
 }
 
 .scrollNav {
