--- a/app/components/Footer/index.module.css
+++ b/app/components/Footer/index.module.css
@@ -30,6 +30,10 @@
   line-height: 2.5;
 }
 
+.footerList ul li:hover {
+  color: rgb(184, 30, 148);
+}
+
 .Socials {
   width: 100%;
 }
@@ -51,9 +55,7 @@
   font-weight: 500;
   color: rgb(115, 115, 115);
 }
-.hover:hover {
-  color: rgb(184, 30, 148);
-}
+
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
   .footer {
@@ -310,6 +312,10 @@
     padding: 0 0 20px 0;
   }
 
+  .footer p {
+    padding: 0 0 10px 0;
+  }
+
   .footerIntro {
     padding: 0 50px 0 0;
     width: 350px;
@@ -330,7 +336,7 @@
   }
 
   .footerList {
-    width: 150px;
+    width: 155px;
   }
 
   .footerList ul li {
@@ -356,6 +362,10 @@
 
   .footer h1 {
     padding: 0 0 20px 0;
+  }
+
+  .footer p {
+    padding: 0 0 10px 0;
   }
 
   .footerIntro {
