--- a/app/components/Home/Services/index.module.css
+++ b/app/components/Home/Services/index.module.css
@@ -50,7 +50,7 @@
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
   .serviceIntro {
-   padding: 30px 0 20px 0;
+    padding: 30px 0 20px 0;
   }
 
   .serviceIntro h1 {
@@ -72,7 +72,7 @@
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
   .serviceIntro {
-   padding: 40px 0 20px 0;
+    padding: 40px 0 20px 0;
   }
 
   .serviceIntro h1 {
@@ -96,7 +96,7 @@
 /* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
 @media (min-width: 425px) {
   .serviceIntro {
-   padding: 50px 0 20px 0;
+    padding: 50px 0 20px 0;
   }
 
   .serviceIntro h1 {
@@ -120,7 +120,7 @@
 /* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
 @media (min-width: 768px) {
   .serviceIntro {
-  padding: 100px 0 20px 0;
+    padding: 100px 0 20px 0;
   }
 
   .serviceIntro h1 {
@@ -141,7 +141,7 @@
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
-   .services {
+  .services {
     padding: 0 0 50px 0;
   }
   .serviceIntro {
@@ -162,6 +162,10 @@
     max-width: 90vw;
     gap: 70px;
     padding: 50px 0 50px 0;
+  }
+  
+  .servicesListGrid {
+    padding: 40px 0 40px 0;
   }
 }
 
@@ -188,5 +192,9 @@
     max-width: 70vw;
     gap: 70px;
     padding: 50px 5px 50px 5px;
+  }
+
+  .servicesListGrid {
+    padding: 40px 0 40px 0;
   }
 }
