--- a/app/(pages)/terms/components/Banner/index.module.css
+++ b/app/(pages)/terms/components/Banner/index.module.css
@@ -13,18 +13,106 @@
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
+    .banner {
+    padding: 80px 10px 0 10px;
+  }
+
+  .bannerContext {
+    padding: 150px 0 150px 0;
+    width: 100%;
+    height: 50%;
+    margin: auto;
+    border-radius: 10px;
+    text-align: center;
+  }
+
+  .bannerContext h1 {
+    font-size: 2.5em;
+    font-weight: 600;
+  }
+  
+  .bannerContext p {
+    font-size: 0.9em;
+    font-weight: 600;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
+    .banner {
+    padding: 80px 10px 0 10px;
+  }
+
+  .bannerContext {
+    padding: 180px 0 180px 0;
+    width: 100%;
+    height: 50%;
+    margin: auto;
+    border-radius: 10px;
+    text-align: center;
+  }
+
+  .bannerContext h1 {
+    font-size: 2.9em;
+    font-weight: 600;
+  }
+  
+  .bannerContext p {
+    font-size: 0.9em;
+    font-weight: 600;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
 @media (min-width: 425px) {
+     .banner {
+    padding: 80px 10px 0 10px;
+  }
+
+  .bannerContext {
+    padding: 180px 0 180px 0;
+    width: 100%;
+    height: 50%;
+    margin: auto;
+    border-radius: 10px;
+    text-align: center;
+  }
+
+  .bannerContext h1 {
+    font-size: 2.9em;
+    font-weight: 600;
+  }
+  
+  .bannerContext p {
+    font-size: 0.9em;
+    font-weight: 600;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
 @media (min-width: 768px) {
+    .banner {
+    padding: 80px 10px 0 10px;
+  }
+
+  .bannerContext {
+    padding: 180px 10px 180px 10px;
+    width: 100%;
+    height: 50%;
+    margin: auto;
+    border-radius: 10px;
+    text-align: center;
+  }
+
+  .bannerContext h1 {
+    font-size: 3.5em;
+    font-weight: 600;
+  }
+  
+  .bannerContext p {
+    font-size: 1.1em;
+    font-weight: 600;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
