--- a/app/(pages)/terms/components/Section/index.module.css
+++ b/app/(pages)/terms/components/Section/index.module.css
@@ -3,8 +3,6 @@
   background-color: white;
   font-family: var(--font-space_grotesk);
 }
-.sectionContext {
-}
 
 .sectionContext h1 {
   color: black;
@@ -12,24 +10,136 @@
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
+  .section {
+    padding: 50px 15px 100px 15px;
+  }
+
+  .sectionContext {
+    padding: 25px 0 40px 0;
+    width: 100%;
+    height: 50%;
+    margin: auto;
+    text-align: start;
+  }
+
+  .sectionContext ol {
+    list-style-type: lower-alpha;
+    padding: 10px 0 0 30px;
+  }
+
+  .sectionContext h1 {
+    font-size: 1.4em;
+    font-weight: 700;
+    padding: 30px 0 5px 0;
+  }
+
+  .sectionContext p {
+    font-size: 1em;
+    font-weight: 600;
+    line-height: 2;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
+ .section {
+    padding: 50px 20px 100px 20px;
+  }
+
+  .sectionContext {
+    padding: 25px 0 40px 0;
+    width: 100%;
+    height: 50%;
+    margin: auto;
+    text-align: start;
+  }
+
+  .sectionContext ol {
+    list-style-type: lower-alpha;
+    padding: 10px 0 0 30px;
+  }
+
+  .sectionContext h1 {
+    font-size: 1.4em;
+    font-weight: 700;
+    padding: 30px 0 5px 0;
+  }
+
+  .sectionContext p {
+    font-size: 1em;
+    font-weight: 600;
+    line-height: 2;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
 @media (min-width: 425px) {
+ .section {
+    padding: 50px 20px 100px 20px;
+  }
+
+  .sectionContext {
+    padding: 25px 0 40px 0;
+    width: 100%;
+    height: 50%;
+    margin: auto;
+    text-align: start;
+  }
+
+  .sectionContext ol {
+    list-style-type: lower-alpha;
+    padding: 10px 0 0 30px;
+  }
+
+  .sectionContext h1 {
+    font-size: 1.4em;
+    font-weight: 700;
+    padding: 30px 0 5px 0;
+  }
+
+  .sectionContext p {
+    font-size: 1em;
+    font-weight: 600;
+    line-height: 2;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
 @media (min-width: 768px) {
+  .section {
+    padding: 50px 20px 100px 20px;
+  }
+
+  .sectionContext {
+    padding: 25px 20px 40px 20px;
+    width: 100%;
+    height: 50%;
+    margin: auto;
+    text-align: start;
+  }
+
+  .sectionContext ol {
+    list-style-type: lower-alpha;
+    padding: 10px 0 0 30px;
+  }
+
+  .sectionContext h1 {
+    font-size: 1.4em;
+    font-weight: 700;
+    padding: 30px 0 5px 0;
+  }
+
+  .sectionContext p {
+    font-size: 1em;
+    font-weight: 600;
+    line-height: 2;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
   .section {
-    padding: 50px 20px 150px 20px;
+    padding: 50px 20px 100px 20px;
   }
 
   .sectionContext {
@@ -45,7 +155,7 @@
     font-weight: 700;
     padding: 30px 0 5px 0;
   }
-  
+
   .sectionContext p {
     font-size: 1em;
     font-weight: 600;
@@ -56,7 +166,7 @@
 /* >>>>>> RESPONSIVE DESIGN 1440px <<<<<<    */
 @media (min-width: 1440px) {
   .section {
-    padding: 50px 20px 150px 20px;
+    padding: 50px 20px 100px 20px;
   }
 
   .sectionContext {
@@ -72,7 +182,7 @@
     font-weight: 600;
     padding: 30px 0 5px 0;
   }
-  
+
   .sectionContext p {
     font-size: 1em;
     font-weight: 600;
