--- a/app/(pages)/terms/components/Section/index.module.css
+++ b/app/(pages)/terms/components/Section/index.module.css
@@ -8,6 +8,10 @@
   color: black;
 }
 
+.focus{
+  color: rgb(184, 30, 148);
+}
+
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
   .section {
