--- a/app/components/Home/Business/index.module.css
+++ b/app/components/Home/Business/index.module.css
@@ -16,17 +16,17 @@
 
 .intro {
   display: none;
-  background-color: rgb(240, 239, 241);
-  font-weight: 500;
-  color: #4b494b;
+  background-color: rgb(248, 248, 248);
+  font-weight: 700;
+  color: rgb(184, 30, 148);
   border-radius: 20px;
 }
 
 .introMobile {
   display: none;
-  background-color: rgb(234, 232, 232);
+  background-color: rgb(248, 248, 248);
   font-weight: 700;
-  color: #4b494b;
+  color: rgb(184, 30, 148);
   border-radius: 20px;
 }
 
@@ -261,7 +261,7 @@
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
-@media (min-width: 1021px) {
+@media only screen and (min-width: 1021px) {
   .business {
     padding: 30px 110px 230px 110px;
   }
