--- a/app/components/Home/Business/index.module.css
+++ b/app/components/Home/Business/index.module.css
@@ -104,7 +104,7 @@
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
   .business {
-    padding: 40px 10px 150px 10px;
+    padding: 40px 7px 150px 7px;
     margin: 0 auto;
   }
 
@@ -129,7 +129,7 @@
 
   .heading {
     font-size: 1.9em;
-    padding: 20px 5px 20px 5px;
+    padding: 20px 0 20px 0;
   }
 
   .businessImg {
@@ -137,9 +137,9 @@
   }
 
   .businessContext p {
-    font-size: 1.1em;
+    font-size: 1em;
     line-height: 2;
-    padding: 20px 9px 20px 9px;
+    padding: 20px 5px 20px 5px;
   }
 
   .btn {
