--- a/app/components/Home/Business/index.module.css
+++ b/app/components/Home/Business/index.module.css
@@ -128,8 +128,8 @@
   }
 
   .heading {
-    font-size: 2.3em;
-    padding: 20px 10px 20px 10px;
+    font-size: 2.5em;
+    padding: 20px 5px 20px 5px; 
   }
 
   .businessImg {
@@ -137,9 +137,10 @@
   }
 
   .businessContext p {
-    font-size: 1em;
+    font-size: 1.1em;
     line-height: 2;
-    padding: 20px 5px 20px 5px;
+    text-align: start;
+    padding: 20px 30px 20px 30px;
   }
 
   .btn {
