--- a/app/components/Header/Nav/index.module.css
+++ b/app/components/Header/Nav/index.module.css
@@ -50,25 +50,30 @@
   display: none;
   background-color: white;
   max-width: 200px;
-  margin: 5px 5px 5px 5px;
-  border-radius: 0 0 5px 5px;
+  border-radius: 0 0 10px 10px;
   box-shadow: 0px 5px 5px 0px rgba(159, 159, 159, 0.2);
-  padding: 20px 10px 20px 10px;
+  padding: 10px 10px 20px 10px;
   z-index: 999;
 }
 
 .dropContent ul li {
-  color: rgb(50, 50, 50);
+  color: rgb(184, 30, 148);
   padding: 5px 10px 5px 10px;
   text-decoration: none;
-  font-size: 0.9em;
-  font-weight: 500;
-  display: block;
+  font-size: 1em;
+  font-weight: 900;
+  display: flex;
+}
+
+.dropContent ul a li {
+  display: flex;
+  gap: 10px;
 }
 
 
 .dropContent ul li:hover {
-color: rgb(184, 30, 148);
+background-color: rgba(224, 184, 219, 0.625);
+border-radius: 10px;
 }
 
 .dropBg {
@@ -77,7 +82,7 @@ color: rgb(184, 30, 148);
   background-color: transparent;
   padding: 20px 0 0 0;
   top: 30px;
-  width: 150px;
+  width: 250px;
   cursor: default;
 }
 
@@ -87,8 +92,12 @@ color: rgb(184, 30, 148);
     padding: 27px 141px 22px 110px;
   }
    .scrollNav{
-     padding: 25px 141px 20px 110px;
+     padding: 26px 141px 21px 110px;
   }
+  
+.dropContent {
+  margin: 6px 5px 5px 5px;
+}
 }
 
 @media (min-width: 1440px) {
@@ -98,6 +107,10 @@ color: rgb(184, 30, 148);
   .scrollNav{
      padding: 35px 202px 25px 161px;
   }
+  
+.dropContent {
+  margin: 10px 5px 5px 5px;
+}
 }
 
 /*
