--- a/app/components/Header/Nav/index.module.css
+++ b/app/components/Header/Nav/index.module.css
@@ -56,16 +56,12 @@
   z-index: 999;
 }
 
-.dropContent ul li {
+.dropContent ul a li {
   color: rgb(184, 30, 148);
-  padding: 5px 10px 5px 10px;
+  padding: 6px 10px 6px 10px;
   text-decoration: none;
   font-size: 1em;
   font-weight: 900;
-  display: flex;
-}
-
-.dropContent ul a li {
   display: flex;
   gap: 10px;
 }
@@ -83,6 +79,10 @@
   top: 30px;
   width: 250px;
   cursor: default;
+}
+
+.notAllowed {
+  cursor: not-allowed;
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
