--- a/app/globals.css
+++ b/app/globals.css
@@ -3,14 +3,15 @@
 @tailwind utilities;
 
 * {
-  box-sizing: border-box;
+  box-sizing:border-box;
   padding: 0;
   margin: 0;
 }
 
 html,
 body {
-  max-width: 100vw;
+  padding: 0;
+  margin: 0;
   overflow-x: hidden;
   background-color: rgb(199, 56, 165);
 }
@@ -22,7 +23,7 @@ a {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 3px;
+  width: 5px;
 }
 
 /* Track */
@@ -32,7 +33,8 @@ a {
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #bdbcbc; 
+  border-radius: 10px;
 }
 
 /* Handle on hover */
