--- a/app/components/Header/MobileNav/index.module.css
+++ b/app/components/Header/MobileNav/index.module.css
@@ -5,11 +5,13 @@
   background-color: white;
   width: 100%;
   justify-content: space-between;
-  z-index: 890;
+  z-index: 888;
   font-family: var(--font-space_grotesk);
-  overflow: hidden;
+  overflow-x: hidden !important;
 }
-
+.main{
+  overflow-x: hidden;
+}
 .mobileNavInner {
   position: fixed;
   display: flex;
@@ -17,6 +19,7 @@
   width: 100%;
   justify-content: space-between;
   z-index: 999;
+  overflow-x: hidden !important;
 }
 
 .disableScroll {
