--- a/app/components/Header/MobileNav/index.module.css
+++ b/app/components/Header/MobileNav/index.module.css
@@ -1,4 +1,3 @@
-
 .mobileNav {
   position: fixed;
   display: flex;
@@ -9,9 +8,7 @@
   font-family: var(--font-space_grotesk);
   overflow-x: hidden !important;
 }
-.main{
-  overflow-x: hidden;
-}
+
 .mobileNavInner {
   position: fixed;
   display: flex;
@@ -60,7 +57,6 @@
 .navMenu h1 {
   font-weight: 700;
   line-height: normal;
-  font-size: 1.5em;
   color: rgb(184, 30, 148);
   padding: 0 0 14px 0;
 }
@@ -69,7 +65,6 @@
   color: rgb(152, 41, 126);
   font-weight: 700;
   line-height: 2;
-  font-size: 1.1em;
 }
 
 .navMenu ul li a {
@@ -79,7 +74,7 @@
 
 .heroSocials {
   display: flex;
-  width: fit-content;
+  width: 100%;
   margin: auto;
   gap: 15px;
   padding: 20px 0 20px 0;
@@ -106,17 +101,25 @@
     padding: 20px 30px 20px 15px;
   }
 
+  .navLinks h1 {
+    font-size: 1.1em;
+  }
+
+  .navLinks p {
+    font-size: 0.9em;
+  }
+
   .navLinks {
     display: grid;
     padding: 0 10px 0 10px;
-    max-width: 90%;
+    max-width: 100%;
     margin: auto;
-    gap: 50px;
+    gap: 40px;
   }
 
   .heroSocials {
     display: flex;
-    width: fit-content;
+    width: 100%;
     margin: auto;
     gap: 15px;
     padding: 40px 0 100px 0;
@@ -133,19 +136,24 @@
   }
 
   .navLinks {
-    display: grid;
+    display: flex;
     padding: 0 10px 0 10px;
-    max-width: 90%;
+    max-width: 100%;
     margin: auto;
     gap: 50px;
   }
 
+  .navList {
+    padding: 0 5px 0 5px;
+  }
+
   .heroSocials {
     display: flex;
-    width: fit-content;
+    width: 100%;
     margin: auto;
     gap: 15px;
-     padding: 40px 0 100px 0;
+    padding: 40px 0 100px 0;
+    justify-content: center;
   }
 }
 
@@ -159,19 +167,20 @@
   }
 
   .navLinks {
-    display: grid;
+    display: flex;
     padding: 0 10px 0 10px;
-    max-width: 90%;
+    max-width: 100%;
     margin: auto;
-    gap: 40px;
+    gap: 50px;
   }
 
   .navList {
-    padding: 10px 20px 10px 20px;
+    padding: 0 5px 0 5px;
   }
+
   .heroSocials {
     display: flex;
-    width: fit-content;
+    width: 100%;
     margin: auto;
     gap: 15px;
     padding: 40px 0 100px 0;
@@ -196,8 +205,9 @@
   }
 
   .navList {
-    padding: 10px 20px 10px 20px;
+    padding: 0 5px 0 5px;
   }
+
   .heroSocials {
     display: flex;
     width: 100%;
