--- a/app/components/Home/Services/index.module.css
+++ b/app/components/Home/Services/index.module.css
@@ -17,7 +17,7 @@
 }
 
 .serviceIntro p {
-  font-weight: 500;
+  font-weight: 700;
   line-height: normal;
   color: #4b494b;
 }
@@ -33,18 +33,25 @@
 .servicesListGrid {
   display: grid;
   justify-items: center;
-  max-width: 300px;
+  max-width: 350px;
   gap: 15px;
+  background-image: url("/images/bg-list.png");
+  background-color: rgb(246, 245, 251);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  border-radius: 20px;
+  box-shadow: 0 2px 3px 2px rgba(239, 239, 239, 0.85);
 }
 
 .servicesListGrid h1 {
   font-size: large;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .servicesListGrid p {
-  font-weight: 500;
+  font-weight: 600;
   color: #4b494b;
+  padding: 0 10px 0 10px;
 }
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
@@ -54,7 +61,7 @@
   }
 
   .serviceIntro h1 {
-    font-size: 2.5em;
+    font-size: 2.2em;
     padding: 20px 20px 20px 20px;
   }
 
@@ -64,8 +71,12 @@
   }
 
   .servicesList {
-    padding: 50px 5px 50px 5px;
+    padding: 50px 10px 50px 10px;
     gap: 60px;
+  }
+  
+  .servicesListGrid {
+    padding: 40px 0 40px 0;
   }
 }
 
@@ -76,19 +87,23 @@
   }
 
   .serviceIntro h1 {
-    font-size: 3em;
+    font-size: 2.6em;
     line-height: 0.9;
     padding: 20px 20px 20px 20px;
   }
 
   .serviceIntro p {
-      font-size: 1.1em;
+    font-size: 1em;
     padding: 20px 19px 20px 19px;
   }
 
   .servicesList {
     padding: 50px 5px 50px 5px;
     gap: 60px;
+  }
+  
+  .servicesListGrid {
+    padding: 40px 0 40px 0;
   }
 }
 
@@ -99,7 +114,7 @@
   }
 
   .serviceIntro h1 {
-    font-size: 3.5em;
+    font-size: 3em;
     line-height: 0.9;
     padding: 20px 20px 20px 20px;
   }
@@ -113,6 +128,14 @@
   .servicesList {
     padding: 50px 5px 50px 5px;
     gap: 60px;
+  }
+  
+  .servicesListGrid {
+    padding: 40px 0 40px 0;
+  }
+  
+  .servicesListGrid {
+    padding: 40px 0 40px 0;
   }
 }
 
@@ -134,7 +157,11 @@
 
   .servicesList {
     padding: 50px 5px 50px 5px;
-    gap: 60px;
+    gap: 20px;
+  }
+  
+  .servicesListGrid {
+    padding: 40px 0 40px 0;
   }
 }
 
@@ -153,16 +180,16 @@
   }
 
   .serviceIntro p {
-    font-size: 1.1em;
-    width: 50vw;
+    font-size: 1em;
+    width: 40vw;
   }
 
   .servicesList {
-    max-width: 90vw;
+    max-width: 100vw;
     gap: 50px;
-    padding: 50px 0 50px 0;
+    padding: 50px 10px 50px 10px;
   }
-  
+
   .servicesListGrid {
     padding: 40px 0 40px 0;
   }
@@ -178,7 +205,7 @@
   }
 
   .serviceIntro h1 {
-    font-size: 3.5em;
+    font-size: 3.4em;
     padding: 0 0 10px 0;
   }
 
@@ -188,7 +215,7 @@
   }
 
   .servicesList {
-    max-width: 70vw;
+    max-width: 80vw;
     gap: 70px;
     padding: 50px 5px 50px 5px;
   }
