--- a/app/components/Home/Business/index.module.css
+++ b/app/components/Home/Business/index.module.css
@@ -351,7 +351,7 @@
   .businessImg {
     max-width: 50%;
     margin: auto;
-    padding: 0 0 0 200px;
+    padding: 0 50px 0 150px;
   }
 
   .intro {
