--- a/app/components/Home/Services/index.module.css
+++ b/app/components/Home/Services/index.module.css
@@ -40,7 +40,8 @@
   background-repeat: no-repeat;
   background-size: 100%;
   border-radius: 20px;
-  box-shadow: 0 2px 3px 2px rgba(239, 239, 239, 0.85);
+  box-shadow: 0 4px 8px 0 rgba(164, 164, 164, 0.153),
+    0 6px 20px 0 rgba(183, 182, 182, 0.073);
 }
 
 .servicesListGrid h1 {
@@ -74,7 +75,7 @@
     padding: 50px 10px 50px 10px;
     gap: 60px;
   }
-  
+
   .servicesListGrid {
     padding: 40px 0 40px 0;
   }
@@ -101,7 +102,7 @@
     padding: 50px 5px 50px 5px;
     gap: 60px;
   }
-  
+
   .servicesListGrid {
     padding: 40px 0 40px 0;
   }
@@ -129,11 +130,11 @@
     padding: 50px 5px 50px 5px;
     gap: 60px;
   }
-  
+
   .servicesListGrid {
     padding: 40px 0 40px 0;
   }
-  
+
   .servicesListGrid {
     padding: 40px 0 40px 0;
   }
@@ -159,7 +160,7 @@
     padding: 50px 5px 50px 5px;
     gap: 20px;
   }
-  
+
   .servicesListGrid {
     padding: 40px 0 40px 0;
   }
