--- a/app/(pages)/FAQs/components/Banner/index.module.css
+++ b/app/(pages)/FAQs/components/Banner/index.module.css
@@ -13,7 +13,7 @@
 }
 
 .bannerContext h1 {
-  color: black;
+  color: rgb(184, 30, 148);
 }
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
@@ -153,9 +153,9 @@
   }
 
   .bannerContext {
-    padding: 220px 10px 220px 10px;
+    padding: 240px 10px 200px 10px;
     width: 100%;
-    height: 50%;
+    height: 100%;
     margin: auto;
     border-radius: 10px;
     text-align: center;
