--- a/app/(pages)/FAQs/components/Section/index.css
+++ b/app/(pages)/FAQs/components/Section/index.css
@@ -52,7 +52,8 @@ summary {
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
-  summary {
+  summary::before,
+  summary::after {
     padding: 1.5rem 1em 1.5rem 0;
     font-size: 1.1rem;
   }
@@ -63,65 +64,55 @@ summary {
 
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
-    
-summary {
+  summary {
     padding: 1.5rem 1em 1.5rem 0;
-  font-size: 1.2rem;
-}
-details{
-    
-  padding: 0 1rem;
-}
+    font-size: 1.2rem;
+  }
+  details {
+    padding: 0 1rem;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
 @media (min-width: 425px) {
-    
-summary {
+  summary {
     padding: 1.5rem 2em 1.5rem 0;
-  font-size: 1.3rem;
-}
-details{
-    
-  padding: 0 1rem;
-}
+    font-size: 1.3rem;
+  }
+  details {
+    padding: 0 1rem;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
 @media (min-width: 768px) {
-    
-summary {
+  summary {
     padding: 1.5rem 1em 1.5rem 0;
-  font-size: 1.4rem;
-}
-details{
-    
-  padding: 0 2rem;
-}
+    font-size: 1.4rem;
+  }
+  details {
+    padding: 0 2rem;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
-    
-summary {
+  summary {
     padding: 1.5rem 1em 1.5rem 0;
-  font-size: 1.4rem;
-}
-details{
-    
-  padding: 0 2rem;
-}
+    font-size: 1.4rem;
+  }
+  details {
+    padding: 0 2rem;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1440px <<<<<<    */
 @media (min-width: 1440px) {
-    
-summary {
+  summary {
     padding: 1.5rem 1em 1.5rem 0;
-  font-size: 1.5rem;
-}
-details{
-    
-  padding: 0 2rem;
-}
+    font-size: 1.5rem;
+  }
+  details {
+    padding: 0 2rem;
+  }
 }
