--- a/app/(pages)/FAQs/components/Section/index.css
+++ b/app/(pages)/FAQs/components/Section/index.css
@@ -1,3 +1,4 @@
+@layer markers {
 summary {
   position: relative;
 }
@@ -13,6 +14,7 @@ summary::after {
 summary::before,
 summary::after {
   width: 0.7em;
+  height: 0;
   font-size: 1.5em;
   color: rgb(184, 30, 148);
   border: 1.5px solid;
@@ -51,7 +53,7 @@ summary {
   cursor: pointer;
   color: rgb(184, 30, 148);
 }
-
+}
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
     
