--- a/app/(pages)/FAQs/components/Section/index.css
+++ b/app/(pages)/FAQs/components/Section/index.css
@@ -4,8 +4,8 @@ summary {
 }
 
 details {
-  box-shadow: 0 4px 8px 0 rgba(164, 164, 164, 0.153),
-    0 6px 20px 0 rgba(183, 182, 182, 0.073);
+  box-shadow: 4px 4px 8px 4px rgba(164, 164, 164, 0.153),
+    4px 6px 20px 4px rgba(183, 182, 182, 0.073);
   background: white;
   border-radius: 5px;
   margin: 0 0 20px 0;
@@ -29,7 +29,7 @@ summary {
     
  
   summary {
-    padding: 1.5rem 1em 1.5rem 0;
+    padding: 1.7rem 1em 1.7rem 0;
     font-size: 1.1rem;
   }
   details {
@@ -42,7 +42,7 @@ summary {
     
 
   summary {
-    padding: 1.5rem 1em 1.5rem 0;
+    padding: 1.7rem 1em 1.7rem 0;
     font-size: 1.2rem;
   }
   details {
@@ -55,7 +55,7 @@ summary {
     
 
   summary {
-    padding: 1.5rem 2em 1.5rem 0;
+    padding: 1.7rem 2em 1.7rem 0;
     font-size: 1.3rem;
   }
   details {
@@ -66,7 +66,7 @@ summary {
 /* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
 @media (min-width: 768px) {
   summary {
-    padding: 1.5rem 1em 1.5rem 0;
+    padding: 1.7rem 1em 1.7rem 0;
     font-size: 1.4rem;
   }
   details {
@@ -77,7 +77,7 @@ summary {
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
   summary {
-    padding: 1.5rem 1em 1.5rem 0;
+    padding: 1.7rem 1em 1.7rem 0;
     font-size: 1.4rem;
   }
   details {
