--- a/app/components/Footer/index.module.css
+++ b/app/components/Footer/index.module.css
@@ -133,6 +133,7 @@
 
   .footerIntro p {
     padding: 0;
+    font-size: 1rem;
   }
 
   .footerContext {
@@ -146,11 +147,11 @@
   }
 
   .footerList {
-    width: 150px;
+    width: 160px;
   }
 
   .footerList ul li {
-    font-size: 0.9em;
+    font-size: 1rem;
     max-width: 100vw;
   }
   .Socials {
