--- a/app/(pages)/FAQs/components/Section/index.css
+++ b/app/(pages)/FAQs/components/Section/index.css
@@ -1,6 +1,7 @@
 
 summary {
   position: relative;
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
 }
 
 details {
@@ -12,6 +13,7 @@ details {
   transition: 100ms;
   color: #4b494b;
   font-size: 1rem;
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
 }
 
 details[open] {
