--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@ body {
   margin: 0;
   overflow-x: hidden;
   background-color: rgb(199, 56, 165);
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
 }
 
 a {
