--- a/app/(pages)/contact-us/components/Banner/index.module.css
+++ b/app/(pages)/contact-us/components/Banner/index.module.css
@@ -13,7 +13,7 @@
 }
 
 .bannerContext h1 {
-  color: black;
+  color: rgb(184, 30, 148);
 }
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
@@ -23,7 +23,7 @@
   }
 
   .bannerContext {
-    padding: 150px 5px 150px 5px;
+     padding: 100px 10px 100px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -49,7 +49,7 @@
   }
 
   .bannerContext {
-    padding: 180px 5px 180px 5px;
+    padding: 100px 10px 100px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -75,7 +75,7 @@
   }
 
   .bannerContext {
-    padding: 180px 5px 180px 5px;
+    padding: 100px 10px 100px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -101,7 +101,7 @@
   }
 
   .bannerContext {
-    padding: 180px 10px 180px 10px;
+     padding: 100px 10px 100px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -127,7 +127,7 @@
   }
 
   .bannerContext {
-    padding: 180px 10px 180px 10px;
+    padding: 142px 10px 142px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -153,7 +153,7 @@
   }
 
   .bannerContext {
-    padding: 220px 10px 220px 10px;
+    padding: 142px 10px 142px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
