--- a/app/components/Home/Hero/index.module.css
+++ b/app/components/Home/Hero/index.module.css
@@ -41,7 +41,7 @@
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
   .Hero {
-    padding: 75px 0 0 0;
+    padding: 80px 0 0 0;
   }
 
   .heroBg {
@@ -148,12 +148,12 @@
   }
 
   .Hero p {
-    font-size: 1.3em;
-    padding: 20px 0 20px 0;
+    font-size: 1.1rem;
+    padding: 20px 30px 20px 30px;
   }
 
   .Hero h1 {
-    font-size: 8vw;
+    font-size: 3.5rem;
     padding: 20px 0 20px 0;
   }
 
