--- a/app/(pages)/developers/components/Banner/index.module.css
+++ b/app/(pages)/developers/components/Banner/index.module.css
@@ -62,15 +62,15 @@
     padding: 0;
   }
 
-  .Hero p {
-    font-size: 0.8rem;
+   .Hero p {
+    font-size: 0.9rem;
     width: 100%;
     margin: 0;
-    padding: 0 0 0 0;
+    padding: 0;
   }
 
   .Hero h1 {
-    font-size: 1.7rem;
+    font-size: 8.7vw;
     padding: 20px 0 20px 0;
   }
 
@@ -101,7 +101,7 @@
     width: 100%;
     padding: 12px 14px 12px 14px;
     border-radius: 10px;
-    font-size: 1em;
+    font-size: 1.1em;
     font-weight: 700;
   }
 
@@ -125,7 +125,7 @@
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
   .Hero {
-    padding: 60px 10px 0 10px;
+    padding: 60px 5px 0 5px;
   }
 
   .heroBg {
@@ -137,11 +137,11 @@
     font-size: 1rem;
     width: 100%;
     margin: 0;
-    padding: 0 0 0 0;
+    padding: 0 5px 0 5px;
   }
 
   .Hero h1 {
-    font-size: 2rem;
+    font-size: 9vw;
     padding: 20px 0 20px 0;
   }
 
@@ -172,7 +172,7 @@
     width: 100%;
     padding: 12px 14px 12px 14px;
     border-radius: 10px;
-    font-size: 1em;
+    font-size: 1.2rem;
     font-weight: 700;
   }
 
@@ -204,15 +204,15 @@
     padding: 0;
   }
 
-  .Hero p {
+   .Hero p {
     font-size: 1rem;
     width: 100%;
     margin: 0;
-    padding: 0 0 0 0;
+    padding: 0;
   }
 
   .Hero h1 {
-    font-size: 2.2rem;
+    font-size: 8.6vw;
     padding: 20px 0 20px 0;
   }
 
@@ -243,7 +243,7 @@
     width: 100%;
     padding: 12px 14px 12px 14px;
     border-radius: 10px;
-    font-size: 1em;
+    font-size: 1.2em;
     font-weight: 700;
   }
 
@@ -314,7 +314,7 @@
     width: 100%;
     padding: 12px 14px 12px 14px;
     border-radius: 10px;
-    font-size: 1em;
+    font-size: 1.3em;
     font-weight: 700;
   }
 
