--- a/app/(pages)/FAQs/components/Banner/index.module.css
+++ b/app/(pages)/FAQs/components/Banner/index.module.css
@@ -5,11 +5,10 @@
 }
 
 .bannerContext {
-  background-image: url("/images/bg-pages.svg");
-  background-color: rgb(219, 218, 224);
+ 
+  background-color: #F4F2FB;
   background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  background-size: cover; 
 }
 
 .bannerContext h1 {
